meal shift signup works. meal shift remove self works. fix table formatting issue.

--- a/bioluminati/static/css/styles.css
+++ b/bioluminati/static/css/styles.css
@@ -471,7 +471,6 @@ table.gradienttable td p{
 }
 
 .showTable {
-    display: block;
     visibility: visible;
 }
 
